
<resources>
    <string name="app_name"><猫加CatPlus></猫加CatPlus></string>
    <string name="Administrator_login">管理员登录</string>
    <string name="Username">账号:</string>
    <string name="Password">密码:</string>
    <string name="SafelyLogin">安全登录</string>
    <string name="LanguageSwitch">English</string>
    <string name="ModeChoose">模式选择</string>
    <string name="UserMode">用户模式</string>
    <string name="MaintainMode">维护模式</string>
    <string name="UserModeTitle">用户模式</string>
    <string name="FeedCat">喂猫粮</string>
    <string name="CleanTheLitter">清理猫砂</string>
    <string name="MaintainModeTitle">维护模式</string>
    <string name="LaserDistanceSensorTest">距离传感器测试</string>
    <string name="UltrasonicSensorTest">超声波传感器测试</string>
    <string name="RGBColorSensorTest">颜色传感器测试</string>
    <string name="ServoTest">舵机测试</string>
    <string name="DistanceValue">距离(mm)</string>
    <string name="RGBValue">R ,G ,B (0_255)</string>
    <string name="MarginValue">余量(%)</string>
    <string name="SlipWayTest2">滑台测试2</string>
    <string name="SlipWayTest1">滑台测试1</string>
    <string name="SuccessfullyLogin">登录成功</string>
    <string name="FailedLogin">登录失败</string>
    <string name="AutoOperate">自动模式</string>
    <string name="ManualOperate">取消自动模式</string>
    <string name="MarginInquiry">猫粮余量查询</string>
    <string name="VoiceStopButton">停止/开启语音播报</string>
    <string name="WelcomeZH">欢迎使用猫加</string>
    <string name="WelcomeEN">Welcome to MoreCat</string>
    <string name="AccessZH">请靠近至10cm内</string>
    <string name="AccessEN">Please Approach within 10cm</string>
</resources>