<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".MODE2">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/MaintainModeTitle"
        android:textSize="100sp"
        android:background="#8fa7ff"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/distance_btn"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="65dp"
            android:background="#8BC34A"
            android:text="@string/LaserDistanceSensorTest"
            android:textSize="50sp" />

        <Button
            android:id="@+id/soundwave_btn"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="65dp"
            android:layout_toRightOf="@+id/distance_btn"
            android:background="#8BC34A"
            android:text="@string/UltrasonicSensorTest"
            android:textSize="50sp" />

        <Button
            android:id="@+id/color_btn"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/distance_btn"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="80dp"
            android:background="#8BC34A"
            android:text="@string/RGBColorSensorTest"
            android:textSize="50sp" />


        <Button
            android:id="@+id/servo_btn"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="210dp"
            android:layout_toRightOf="@+id/color_btn"
            android:background="#ffb87e"
            android:text="@string/ServoTest"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/distance_txt"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/distance_btn"
            android:layout_marginLeft="200dp"
            android:background="#CCCCCC"
            android:hint="@string/DistanceValue"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/color_txt"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/color_btn"
            android:layout_marginLeft="-400dp"
            android:layout_toRightOf="@+id/color_btn"
            android:background="#CCCCCC"
            android:hint="@string/RGBValue"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/soundwave_txt"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/soundwave_btn"
            android:layout_marginLeft="700dp"
            android:background="#CCCCCC"
            android:hint="@string/MarginValue"
            android:textSize="40sp" />


        <Button
            android:id="@+id/slipway_btn_2"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/servo_btn"
            android:layout_marginLeft="-400dp"
            android:layout_marginTop="80dp"
            android:layout_toRightOf="@+id/servo_btn"
            android:background="#ffb87e"
            android:text="@string/SlipWayTest2"
            android:textSize="50sp" />

        <Button
            android:id="@+id/slipway_btn_1"
            android:layout_width="400dp"
            android:layout_height="wrap_content"

            android:layout_below="@+id/servo_btn"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="80dp"
            android:background="#ffb87e"
            android:text="@string/SlipWayTest1"
            android:textSize="50sp" />


    </RelativeLayout>
</LinearLayout>