<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".LOGIN">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/Administrator_login"
        android:textSize="60sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="100dp"

        android:hint="@string/Username"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="300dp"
        android:layout_marginRight="100dp"
        android:drawablePadding="5dp"
        android:hint="@string/Password"
        android:inputType="textPassword"

        android:textSize="50sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:background="#ffb87e"
        android:text="@string/SafelyLogin"
        android:textSize="40sp" />

</RelativeLayout>